omnibus/serde/formats/hocon/_antlr/HoconParser.py
# flake8: noqa
# type: ignore
# Generated from Hocon.g4 by ANTLR 4.8
# encoding: utf-8
from ....._vendor.antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class HoconParser ( Parser ):

    grammarFileName = "Hocon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'{'", "'}'", "'.'", "'['", "']'", 
                     "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "COMMENT", "NUMBER", "STRING", "PATH_ELEMENT", "REFERENCE", 
                      "KV", "WS" ]

    RULE_hocon = 0
    RULE_prop = 1
    RULE_obj = 2
    RULE_objectBegin = 3
    RULE_objectEnd = 4
    RULE_objectData = 5
    RULE_arrayData = 6
    RULE_stringData = 7
    RULE_referenceData = 8
    RULE_numberData = 9
    RULE_key = 10
    RULE_path = 11
    RULE_arrayBegin = 12
    RULE_arrayEnd = 13
    RULE_array = 14
    RULE_arrayValue = 15
    RULE_arrayString = 16
    RULE_arrayReference = 17
    RULE_arrayNumber = 18
    RULE_arrayObj = 19
    RULE_arrayArray = 20
    RULE_stringValue = 21
    RULE_rawstring = 22

    ruleNames =  [ "hocon", "prop", "obj", "objectBegin", "objectEnd", "objectData", 
                   "arrayData", "stringData", "referenceData", "numberData", 
                   "key", "path", "arrayBegin", "arrayEnd", "array", "arrayValue", 
                   "arrayString", "arrayReference", "arrayNumber", "arrayObj", 
                   "arrayArray", "stringValue", "rawstring" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    COMMENT=8
    NUMBER=9
    STRING=10
    PATH_ELEMENT=11
    REFERENCE=12
    KV=13
    WS=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class HoconContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def obj(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HoconParser.ObjContext)
            else:
                return self.getTypedRuleContext(HoconParser.ObjContext,i)


        def array(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HoconParser.ArrayContext)
            else:
                return self.getTypedRuleContext(HoconParser.ArrayContext,i)


        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HoconParser.PropContext)
            else:
                return self.getTypedRuleContext(HoconParser.PropContext,i)


        def getRuleIndex(self):
            return HoconParser.RULE_hocon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHocon" ):
                listener.enterHocon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHocon" ):
                listener.exitHocon(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHocon" ):
                return visitor.visitHocon(self)
            else:
                return visitor.visitChildren(self)




    def hocon(self):

        localctx = HoconParser.HoconContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_hocon)
        self._la = 0 # Token type
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HoconParser.T__1:
                    self.state = 46
                    self.obj()
                    self.state = 51
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HoconParser.T__4:
                    self.state = 52
                    self.array()
                    self.state = 57
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HoconParser.STRING or _la==HoconParser.PATH_ELEMENT:
                    self.state = 58
                    self.prop()
                    self.state = 63
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def objectData(self):
            return self.getTypedRuleContext(HoconParser.ObjectDataContext,0)


        def arrayData(self):
            return self.getTypedRuleContext(HoconParser.ArrayDataContext,0)


        def stringData(self):
            return self.getTypedRuleContext(HoconParser.StringDataContext,0)


        def referenceData(self):
            return self.getTypedRuleContext(HoconParser.ReferenceDataContext,0)


        def numberData(self):
            return self.getTypedRuleContext(HoconParser.NumberDataContext,0)


        def getRuleIndex(self):
            return HoconParser.RULE_prop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProp" ):
                listener.enterProp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProp" ):
                listener.exitProp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProp" ):
                return visitor.visitProp(self)
            else:
                return visitor.visitChildren(self)




    def prop(self):

        localctx = HoconParser.PropContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prop)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.objectData()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.arrayData()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.stringData()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.referenceData()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 70
                self.numberData()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def objectBegin(self):
            return self.getTypedRuleContext(HoconParser.ObjectBeginContext,0)


        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HoconParser.PropContext)
            else:
                return self.getTypedRuleContext(HoconParser.PropContext,i)


        def objectEnd(self):
            return self.getTypedRuleContext(HoconParser.ObjectEndContext,0)


        def getRuleIndex(self):
            return HoconParser.RULE_obj

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObj" ):
                listener.enterObj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObj" ):
                listener.exitObj(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObj" ):
                return visitor.visitObj(self)
            else:
                return visitor.visitChildren(self)




    def obj(self):

        localctx = HoconParser.ObjContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_obj)
        self._la = 0 # Token type
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.objectBegin()
                self.state = 74
                self.prop()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HoconParser.T__0) | (1 << HoconParser.STRING) | (1 << HoconParser.PATH_ELEMENT))) != 0):
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==HoconParser.T__0:
                        self.state = 75
                        self.match(HoconParser.T__0)


                    self.state = 78
                    self.prop()
                    self.state = 83
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 84
                self.objectEnd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.objectBegin()
                self.state = 87
                self.objectEnd()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectBeginContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HoconParser.RULE_objectBegin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectBegin" ):
                listener.enterObjectBegin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectBegin" ):
                listener.exitObjectBegin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectBegin" ):
                return visitor.visitObjectBegin(self)
            else:
                return visitor.visitChildren(self)




    def objectBegin(self):

        localctx = HoconParser.ObjectBeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_objectBegin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(HoconParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectEndContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HoconParser.RULE_objectEnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectEnd" ):
                listener.enterObjectEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectEnd" ):
                listener.exitObjectEnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectEnd" ):
                return visitor.visitObjectEnd(self)
            else:
                return visitor.visitChildren(self)




    def objectEnd(self):

        localctx = HoconParser.ObjectEndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_objectEnd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(HoconParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectDataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key(self):
            return self.getTypedRuleContext(HoconParser.KeyContext,0)


        def obj(self):
            return self.getTypedRuleContext(HoconParser.ObjContext,0)


        def KV(self):
            return self.getToken(HoconParser.KV, 0)

        def getRuleIndex(self):
            return HoconParser.RULE_objectData

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectData" ):
                listener.enterObjectData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectData" ):
                listener.exitObjectData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectData" ):
                return visitor.visitObjectData(self)
            else:
                return visitor.visitChildren(self)




    def objectData(self):

        localctx = HoconParser.ObjectDataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_objectData)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.key()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HoconParser.KV:
                self.state = 96
                self.match(HoconParser.KV)


            self.state = 99
            self.obj()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key(self):
            return self.getTypedRuleContext(HoconParser.KeyContext,0)


        def KV(self):
            return self.getToken(HoconParser.KV, 0)

        def array(self):
            return self.getTypedRuleContext(HoconParser.ArrayContext,0)


        def getRuleIndex(self):
            return HoconParser.RULE_arrayData

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayData" ):
                listener.enterArrayData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayData" ):
                listener.exitArrayData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayData" ):
                return visitor.visitArrayData(self)
            else:
                return visitor.visitChildren(self)




    def arrayData(self):

        localctx = HoconParser.ArrayDataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayData)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.key()
            self.state = 102
            self.match(HoconParser.KV)
            self.state = 103
            self.array()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringDataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key(self):
            return self.getTypedRuleContext(HoconParser.KeyContext,0)


        def KV(self):
            return self.getToken(HoconParser.KV, 0)

        def stringValue(self):
            return self.getTypedRuleContext(HoconParser.StringValueContext,0)


        def getRuleIndex(self):
            return HoconParser.RULE_stringData

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringData" ):
                listener.enterStringData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringData" ):
                listener.exitStringData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringData" ):
                return visitor.visitStringData(self)
            else:
                return visitor.visitChildren(self)




    def stringData(self):

        localctx = HoconParser.StringDataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stringData)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.key()
            self.state = 106
            self.match(HoconParser.KV)
            self.state = 107
            self.stringValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReferenceDataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key(self):
            return self.getTypedRuleContext(HoconParser.KeyContext,0)


        def KV(self):
            return self.getToken(HoconParser.KV, 0)

        def REFERENCE(self):
            return self.getToken(HoconParser.REFERENCE, 0)

        def getRuleIndex(self):
            return HoconParser.RULE_referenceData

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReferenceData" ):
                listener.enterReferenceData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReferenceData" ):
                listener.exitReferenceData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReferenceData" ):
                return visitor.visitReferenceData(self)
            else:
                return visitor.visitChildren(self)




    def referenceData(self):

        localctx = HoconParser.ReferenceDataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_referenceData)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.key()
            self.state = 110
            self.match(HoconParser.KV)
            self.state = 111
            self.match(HoconParser.REFERENCE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberDataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key(self):
            return self.getTypedRuleContext(HoconParser.KeyContext,0)


        def KV(self):
            return self.getToken(HoconParser.KV, 0)

        def NUMBER(self):
            return self.getToken(HoconParser.NUMBER, 0)

        def getRuleIndex(self):
            return HoconParser.RULE_numberData

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberData" ):
                listener.enterNumberData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberData" ):
                listener.exitNumberData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberData" ):
                return visitor.visitNumberData(self)
            else:
                return visitor.visitChildren(self)




    def numberData(self):

        localctx = HoconParser.NumberDataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_numberData)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.key()
            self.state = 114
            self.match(HoconParser.KV)
            self.state = 115
            self.match(HoconParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def path(self):
            return self.getTypedRuleContext(HoconParser.PathContext,0)


        def STRING(self):
            return self.getToken(HoconParser.STRING, 0)

        def getRuleIndex(self):
            return HoconParser.RULE_key

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKey" ):
                listener.enterKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKey" ):
                listener.exitKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKey" ):
                return visitor.visitKey(self)
            else:
                return visitor.visitChildren(self)




    def key(self):

        localctx = HoconParser.KeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_key)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HoconParser.PATH_ELEMENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.path()
                pass
            elif token in [HoconParser.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(HoconParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PATH_ELEMENT(self, i:int=None):
            if i is None:
                return self.getTokens(HoconParser.PATH_ELEMENT)
            else:
                return self.getToken(HoconParser.PATH_ELEMENT, i)

        def getRuleIndex(self):
            return HoconParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPath" ):
                return visitor.visitPath(self)
            else:
                return visitor.visitChildren(self)




    def path(self):

        localctx = HoconParser.PathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_path)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(HoconParser.PATH_ELEMENT)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HoconParser.T__3:
                self.state = 122
                self.match(HoconParser.T__3)
                self.state = 123
                self.match(HoconParser.PATH_ELEMENT)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayBeginContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HoconParser.RULE_arrayBegin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayBegin" ):
                listener.enterArrayBegin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayBegin" ):
                listener.exitArrayBegin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayBegin" ):
                return visitor.visitArrayBegin(self)
            else:
                return visitor.visitChildren(self)




    def arrayBegin(self):

        localctx = HoconParser.ArrayBeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arrayBegin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(HoconParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayEndContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HoconParser.RULE_arrayEnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayEnd" ):
                listener.enterArrayEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayEnd" ):
                listener.exitArrayEnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayEnd" ):
                return visitor.visitArrayEnd(self)
            else:
                return visitor.visitChildren(self)




    def arrayEnd(self):

        localctx = HoconParser.ArrayEndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arrayEnd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(HoconParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayBegin(self):
            return self.getTypedRuleContext(HoconParser.ArrayBeginContext,0)


        def arrayValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HoconParser.ArrayValueContext)
            else:
                return self.getTypedRuleContext(HoconParser.ArrayValueContext,i)


        def arrayEnd(self):
            return self.getTypedRuleContext(HoconParser.ArrayEndContext,0)


        def getRuleIndex(self):
            return HoconParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = HoconParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.arrayBegin()
                self.state = 134
                self.arrayValue()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HoconParser.T__0) | (1 << HoconParser.T__1) | (1 << HoconParser.T__4) | (1 << HoconParser.T__6) | (1 << HoconParser.NUMBER) | (1 << HoconParser.STRING) | (1 << HoconParser.PATH_ELEMENT) | (1 << HoconParser.REFERENCE))) != 0):
                    self.state = 136
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==HoconParser.T__0:
                        self.state = 135
                        self.match(HoconParser.T__0)


                    self.state = 138
                    self.arrayValue()
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 144
                self.arrayEnd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.arrayBegin()
                self.state = 147
                self.arrayEnd()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayString(self):
            return self.getTypedRuleContext(HoconParser.ArrayStringContext,0)


        def arrayReference(self):
            return self.getTypedRuleContext(HoconParser.ArrayReferenceContext,0)


        def arrayNumber(self):
            return self.getTypedRuleContext(HoconParser.ArrayNumberContext,0)


        def arrayObj(self):
            return self.getTypedRuleContext(HoconParser.ArrayObjContext,0)


        def arrayArray(self):
            return self.getTypedRuleContext(HoconParser.ArrayArrayContext,0)


        def getRuleIndex(self):
            return HoconParser.RULE_arrayValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayValue" ):
                listener.enterArrayValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayValue" ):
                listener.exitArrayValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayValue" ):
                return visitor.visitArrayValue(self)
            else:
                return visitor.visitChildren(self)




    def arrayValue(self):

        localctx = HoconParser.ArrayValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_arrayValue)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.arrayString()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.arrayReference()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 153
                self.arrayNumber()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 154
                self.arrayObj()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 155
                self.arrayArray()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayStringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stringValue(self):
            return self.getTypedRuleContext(HoconParser.StringValueContext,0)


        def getRuleIndex(self):
            return HoconParser.RULE_arrayString

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayString" ):
                listener.enterArrayString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayString" ):
                listener.exitArrayString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayString" ):
                return visitor.visitArrayString(self)
            else:
                return visitor.visitChildren(self)




    def arrayString(self):
